fieldservice/phpmyadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: phpmyadmin
  name: phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: phpmyadmin
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/fieldservice-default: "true"
        io.kompose.service: phpmyadmin
    spec:
      containers:
        - env:
            - name: MYSQL_ROOT_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: MYSQL_ROOT_PASSWORD
                  name: env-phpmyadmin-env
            - name: PMA_HOST
              valueFrom:
                configMapKeyRef:
                  key: PMA_HOST
                  name: env-phpmyadmin-env
            - name: PMA_PORT
              valueFrom:
                configMapKeyRef:
                  key: PMA_PORT
                  name: env-phpmyadmin-env
          image: phpmyadmin/phpmyadmin
          name: phpmyadmin
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
